# OsciQuant

./: LICENSE  README.md  pyproject.toml
osciquant/: handler.py  parametrization.py  quantizers.py  regularization.py  util.py
tests/: cifar10.ipynb
