[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osciquant_regularization"
version = "0.1.0"
description = "A PyTorch package for OsciQuant regularization for quantiation robustness"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jonathan"}
]
dependencies = [
    "torch"
]
